# blooms

./: README.md  config.py  pyproject.toml  requirements.txt  run.sh  run_llm.py  run_server.py  run_spiders.py
app/: items.py  middlewares.py  settings.py
app/spiders/: articles.py  freshproduce.py
data/processed/: analysis_summary.csv  scraped_data.csv
data/raw/: freshproduce.json
llm/: analyzer.py  processor.py
