[project]
name = "blooms-scrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.0",
    "pydantic-settings>=2.10.0",
    "ruff>=0.12.0",
    "scrapy>=2.13.2",
    "streamlit>=1.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 100
